Ajuste de fiabilidad de código