@@ -12,8 +12,6 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
-
 @Component
 public class SugerenciaInscripcionMapper {
   public SugerenciaInscripcionDTO toDto(SugerenciaInscripcion sugerencia) {
@@ -40,7 +38,7 @@ public class SugerenciaInscripcionMapper {
   }
 
   public List<SugerenciaInscripcionDTO> toSugerenciaInscripcionDtoList(List<SugerenciaInscripcion> sugerencias) {
-    return sugerencias.stream().map(this::toDto).collect(toList());
+    return sugerencias.stream().map(this::toDto).toList();
   }
 
   public HistoriaAcademicaDTO toDto(HistoriaAcademica historiaAcademica) {
@@ -52,8 +50,7 @@ public class SugerenciaInscripcionMapper {
                                .coeficiente(historiaAcademica.getCoeficiente())
                                .codigosCursadasAnteriores(
                                  historiaAcademica.cursadasAnteriores().stream()
-                                                  .map(c -> c.getMateria().getCodigo())
-                                                  .collect(toList()))
+                                                  .map(c -> c.getMateria().getCodigo()).toList())
                                .codigosInscripcionesActuales(
                                  historiaAcademica.materiasEnCurso().stream()
                                                   .map(Materia::getCodigo)
